# RockitFactory

./: .gitignore  CLAUDE.md  MEMORY.md  Makefile  pyproject.toml
.claude/: settings.local.json
architecture/: 01-overview.md  02-monorepo-structure.md  03-pipeline-mlops.md  04-platform-abstraction.md  05-data-ingestion.md  06-migration-plan.md  07-code-mapping.md  08-agent-system.md  08-self-learning.md  09-agent-dashboard.md  10-backtest-and-training.md  11-testing-and-automation.md  12-deployment.md  13-backtest-data-pipeline.md  14-bridge-deterministic-strategies.md  15-llm-training-pipeline.md  competition.md
brainstorm/: 02-my-questions.md  03-migration.md  04-agent-specialization-and-consensus.md  05-training-data-pipeline-for-specialists.md  06-agentic-gaps.md  07-augmenting-training-tape-reading-intelligence.md  08-systematic-observations.md  09-building-backtest-knowledgebase.md  10-Next-steps.md  10A-Next-steps-domain-experts.md  12-strategy-expansion-roadmap.md  13-agentic-ideas.md  14-march13-2026-where-we-are.md  15-daily-trading-plan.md  16-live-dashboard-prototype.md
configs/: filters.yaml  instruments.yaml  strategies.yaml  strategies.yaml.tmp.16496.1773460311641
data/: debate_log.json  nwog_study_raw.csv
refactoring/: README.md
reports/: 2026-03-09-phase5-filter-assessment-results.md  2026-03-10-cri-demotion-agentic-backtest.md  2026-03-11-run-e-llm-debate-backtest.md  2026-03-12-new-strategies-backtest-report.md  2026-03-13-new-strategies-backtest-report.md  2026-03-14-portfolio-benchmark.md  RockitFactory-Architecture-Evolution.pptx  (+26 more)
(+441 files in other folders)
