[project]
name = "rockit-factory"
version = "0.1.0"
description = "RockitFactory — unified quantitative trading platform"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "rockit-core",
    "rockit-train",
    "rockit-serve",
    "rockit-ingest",
    "rockit-pipeline",
]

[tool.uv.sources]
rockit-core = { workspace = true }
rockit-train = { workspace = true }
rockit-serve = { workspace = true }
rockit-ingest = { workspace = true }
rockit-pipeline = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/rockit-core",
    "packages/rockit-train",
    "packages/rockit-serve",
    "packages/rockit-ingest",
    "packages/rockit-pipeline",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "httpx>=0.27",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
addopts = "-v --tb=short --import-mode=importlib"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
